<resources>
    <string name="app_name" translatable="false">L3devAppMob</string>
    <string name="show_ad">Show ad</string>
    <string name="add_ad">Add ad</string>
    <string name="show_ads_list">Show ads list</string>
    <string name="my_profile">My profile</string>
    <string name="published">Published </string>
    <string name="at">at</string>
    <string name="contact">Contact</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="phonenumber">Phone number</string>
    <string name="prefs_saved">Preferences saved !</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="all_ads">All ads</string>
    <string name="my_ads">My ads</string>
    <string name="my_local_ads">Locally saved ads</string>
    <string name="add_pic">Add a picture</string>
    <string name="refresh_list">Refresh list</string>
    <string name="edit_ad">Edit ad</string>
    <string name="choose_picture_source">Choose picture source</string>
    <string name="phone_gallery">Phone gallery</string>
    <string name="take_picture">Take a picture</string>
    <string name="delete_ad">Delete ad</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_ad_dialog_msg">Do you really want to delete this ad ?</string>
    <string name="ad_deleted">Ad deleted</string>
    <string name="postcode_city">Postcode - City</string>
    <string name="save_ad_locally">Save ad on local storage</string>
    <string name="no_connection">No connection</string>
    <string name="connected_to_wifi">Connected to wifi</string>
    <string name="connected_to_data">Connected to data</string>
    <string name="ad_saved">Ad saved !</string>
    <string name="ad_save_failure">Ad save failure</string>
</resources>
