<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    android:id="@+id/test_menu"

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_add_annonce"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="Favoris"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_show_profil"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="Favoris"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_show_all_annonces"
        android:title="@string/all_ads"
        app:showAsAction="never"/>
    <item android:id="@+id/action_show_my_annonces"
        android:title="@string/my_ads"
        app:showAsAction="never"/>
    <item android:id="@+id/action_add_pic"
        android:title="@string/add_pic"
        app:showAsAction="never"/>

</menu>