<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeActivityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ButtonsLayout"
        android:layout_width="363dp"
        android:layout_height="655dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/showAdButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/show_ad"
            app:layout_constraintBottom_toTopOf="@+id/addAdButton"
            app:layout_constraintEnd_toEndOf="@+id/addAdButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/addAdButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addAdButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_ad"
            app:layout_constraintBottom_toTopOf="@+id/adsListButton"
            app:layout_constraintEnd_toEndOf="@+id/adsListButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/adsListButton"
            app:layout_constraintTop_toBottomOf="@+id/showAdButton" />

        <Button
            android:id="@+id/adsListButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show_ads_list"
            app:layout_constraintBottom_toTopOf="@+id/profileButton"
            app:layout_constraintEnd_toEndOf="@+id/profileButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/profileButton"
            app:layout_constraintTop_toBottomOf="@+id/addAdButton" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/my_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adsListButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>